--- a/template/src/index.css
+++ b/template/src/index.css
@@ -1,5 +1,6 @@
 
 .number-generator {
+  font-family: Georgia, 'Times New Roman', Times, serif;
   text-align: center;
   align-content: center;
   margin: auto;
